WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
96617
[Win] REGRESSION(
r128400
): It broke the build
https://bugs.webkit.org/show_bug.cgi?id=96617
Summary
[Win] REGRESSION(r128400): It broke the build
Csaba Osztrogonác
Reported
2012-09-13 01:01:08 PDT
http://build.webkit.org/builders/Qt%20Windows%2032-bit%20Release/builds/54650/steps/compile-webkit/logs/stdio
InspectorAllInOne.cpp c:\webkitbuildslave\szeged-windows-1\qt-windows-32bit-release\build\source\webcore\inspector\InspectorDebuggerAgent.cpp(228) : error C2872: 'Array' : ambiguous symbol could be 'generated\InspectorTypeBuilder.h(92) : WebCore::TypeBuilder::Array' or 'c:\webkitbuildslave\szeged-windows-1\qt-windows-32bit-release\build\source\javascriptcore\runtime\IndexingType.h(44) : const JSC::IndexingType JSC::Array' c:\webkitbuildslave\szeged-windows-1\qt-windows-32bit-release\build\source\webcore\inspector\InspectorDebuggerAgent.cpp(228) : error C2872: 'Array' : ambiguous symbol could be 'generated\InspectorTypeBuilder.h(92) : WebCore::TypeBuilder::Array' or 'c:\webkitbuildslave\szeged-windows-1\qt-windows-32bit-release\build\source\javascriptcore\runtime\IndexingType.h(44) : const JSC::IndexingType JSC::Array' c:\webkitbuildslave\szeged-windows-1\qt-windows-32bit-release\build\source\webcore\inspector\InspectorDebuggerAgent.cpp(366) : error C2872: 'Array' : ambiguous symbol could be 'generated\InspectorTypeBuilder.h(92) : WebCore::TypeBuilder::Array' or 'c:\webkitbuildslave\szeged-windows-1\qt-windows-32bit-release\build\source\javascriptcore\runtime\IndexingType.h(44) : const JSC::IndexingType JSC::Array' c:\webkitbuildslave\szeged-windows-1\qt-windows-32bit-release\build\source\webcore\inspector\InspectorDebuggerAgent.cpp(366) : error C2872: 'Array' : ambiguous symbol could be 'generated\InspectorTypeBuilder.h(92) : WebCore::TypeBuilder::Array' or 'c:\webkitbuildslave\szeged-windows-1\qt-windows-32bit-release\build\source\javascriptcore\runtime\IndexingType.h(44) : const JSC::IndexingType JSC::Array' c:\webkitbuildslave\szeged-windows-1\qt-windows-32bit-release\build\source\webcore\inspector\InspectorDebuggerAgent.cpp(378) : error C2872: 'Array' : ambiguous symbol could be 'generated\InspectorTypeBuilder.h(92) : WebCore::TypeBuilder::Array' or 'c:\webkitbuildslave\szeged-windows-1\qt-windows-32bit-release\build\source\javascriptcore\runtime\IndexingType.h(44) : const JSC::IndexingType JSC::Array' ...
Attachments
the patch
(10.47 KB, patch)
2012-09-13 01:14 PDT
,
Filip Pizlo
fpizlo
: review-
fpizlo
: commit-queue-
Details
Formatted Diff
Diff
the patch
(11.72 KB, patch)
2012-09-13 01:27 PDT
,
Filip Pizlo
no flags
Details
Formatted Diff
Diff
Patch (fix interpreter build)
(2.86 KB, patch)
2012-09-13 03:03 PDT
,
Kevin Funk
hausmann
: review+
hausmann
: commit-queue+
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Filip Pizlo
Comment 1
2012-09-13 01:11:40 PDT
Fix on the way. I think that using the name "Array" in the JSC namespace was a mistake. Changing to "ArrayClass" to avoid the namespace pollution.
Filip Pizlo
Comment 2
2012-09-13 01:14:11 PDT
Created
attachment 163810
[details]
the patch
Filip Pizlo
Comment 3
2012-09-13 01:23:03 PDT
(In reply to
comment #2
)
> Created an attachment (id=163810) [details] > the patch
It appears that this missed a use of JSC::Array in WebCore. New patch coming shortly.
Filip Pizlo
Comment 4
2012-09-13 01:27:24 PDT
Created
attachment 163813
[details]
the patch
Filip Pizlo
Comment 5
2012-09-13 01:41:37 PDT
***
Bug 96623
has been marked as a duplicate of this bug. ***
Ilya Tikhonovsky
Comment 6
2012-09-13 01:43:13 PDT
Comment on
attachment 163813
[details]
the patch Clearing flags on attachment: 163813 Committed
r128428
: <
http://trac.webkit.org/changeset/128428
>
Ilya Tikhonovsky
Comment 7
2012-09-13 01:43:20 PDT
All reviewed patches have been landed. Closing bug.
Kevin Funk
Comment 8
2012-09-13 02:47:30 PDT
Still getting compilation failures, probably related to these changes: D:\devel\src\webkit\Source\JavaScriptCore\interpreter\Interpreter.cpp(3610) : error C2039: 'canGetIndex' : is not a member of 'JSC::JSArray' D:\devel\src\webkit\Source\JavaScriptCore\runtime\JSArray.h(33) : see declaration of 'JSC::JSArray' D:\devel\src\webkit\Source\JavaScriptCore\interpreter\Interpreter.cpp(3611) : error C2039: 'getIndex' : is not a member of 'JSC::JSArray' D:\devel\src\webkit\Source\JavaScriptCore\runtime\JSArray.h(33) : see declaration of 'JSC::JSArray' D:\devel\src\webkit\Source\JavaScriptCore\interpreter\Interpreter.cpp(3652) : error C2039: 'canSetIndex' : is not a member of 'JSC::JSArray' D:\devel\src\webkit\Source\JavaScriptCore\runtime\JSArray.h(33) : see declaration of 'JSC::JSArray' D:\devel\src\webkit\Source\JavaScriptCore\interpreter\Interpreter.cpp(3653) : error C2039: 'setIndex' : is not a member of 'JSC::JSArray' D:\devel\src\webkit\Source\JavaScriptCore\runtime\JSArray.h(33) : see declaration of 'JSC::JSArray' D:\devel\src\webkit\Source\JavaScriptCore\interpreter\Interpreter.cpp(5012) : error C2664: 'JSC::JSObject::putDirectAccessor' : cannot convert parameter 1 from 'JSC::JSGlobalData' to 'JSC::ExecState *' No user-defined-conversion operator available that can perform this conversion, or the operator cannot be called
Kevin Funk
Comment 9
2012-09-13 03:03:58 PDT
Created
attachment 163826
[details]
Patch (fix interpreter build)
Simon Hausmann
Comment 10
2012-09-14 07:55:46 PDT
Committed
r128611
: <
http://trac.webkit.org/changeset/128611
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug